Laggy Android support, controller support, small tweaks.